package clases;

    public enum CodigoColor {
    ROJO,
    AMARILLO,
    VERDE,
    BLANCO
}



