package clases;

public enum EstadoPaciente {
    ESTABLE,
    GRAVE,
    PENDIENTE_TRASLADO,
    ALTA
}
