@startuml
' ============================================================
' DIAGRAMA DE CLASES - ENUNCIADO 3: GESTIÓN DE URGENCIAS Y TRIAJE
' ============================================================

' ----- ENUMERADOS -----
enum CodigoColor {
    ROJO
    AMARILLO
    VERDE
    BLANCO
}

enum EstadoPaciente {
    ESTABLE
    GRAVE
    PENDIENTE_TRASLADO
    ALTA
}

' ----- CLASE ABSTRACTA -----
abstract class Persona {
    - dni: String
    - nombre: String
    - apellidos: String
    - fechaNacimiento: Date
    - email: String
    --
    + getDni(): String
    + getNombre(): String
    + getApellidos(): String
    + setDatos(datos: Map): void
}

' ----- CLASES QUE HEREDAN DE PERSONA -----
class Paciente extends Persona {
    - numeroHistoria: String
    - estado: EstadoPaciente
    - triaje: Triaje
    --
    + actualizarEstado(estado: EstadoPaciente): void
    + setTriaje(triaje: Triaje): void
    + getTriaje(): Triaje
    + getNumeroHistoria(): String
}

class Medico extends Persona {
    - especialidad: String
    - diagnosticoActual: String
    - tratamientoIndicado: String
    --
    + atenderPaciente(paciente: Paciente): void
    + generarInforme(paciente: Paciente): void
}

class Enfermero extends Persona {
    - unidad: String
    --
    + realizarTriaje(paciente: Paciente): Triaje
    - obtenerFrecuenciaCardiaca(): int
    - obtenerTemperatura(): float
    - obtenerPresionArterial(): String
}

' ----- TRIAJE -----
class Triaje {
    - fechaHora: Date
    - codigo: CodigoColor
    - presionArterial: String
    - frecuenciaCardiaca: int
    - temperatura: float
    - sintomas: String
    --
    + calcularCodigo(): CodigoColor
    + obtenerResumen(): String
    + getCodigo(): CodigoColor
}

' ----- TURNO (PARA CÓDIGO AMARILLO) -----
class Turno {
    - numero: int
    - tiempoEstimado: int
    - estado: String
    - paciente: Paciente
    --
    + getNumero(): int
}

' ----- RECURSOS (CLASE ABSTRACTA) -----
abstract class Recurso {
    # id: String
    # disponible: boolean
    # ubicacion: String
    --
    + reservar(): boolean
    + liberar(): void
    + estaDisponible(): boolean
    + getId(): String
    + getUbicacion(): String
}

class Cama extends Recurso {
    - tipo: String
    - especialidad: String
    - pacienteActual: Paciente
    --
    + asignarPaciente(p: Paciente): void
    + liberarCama(): void
    + esBoxReanimacion(): boolean
    + getTipo(): String
    + getEspecialidad(): String
}

class EquipoMedico extends Recurso {
    - nombre: String
    - estadoOperativo: boolean
    --
    + getNombre(): String
}

' ----- TRASLADO -----
class Traslado {
    - fechaHora: Date
    - destino: String
    - motivo: String
    - estado: String
    --
    + coordinar(): void
}

' ----- SISTEMA CENTRAL DE URGENCIAS -----
class SistemaUrgencias {
    - colaPacientes: List<Paciente>
    - camasDisponibles: List<Cama>
    - turnosActivos: List<Turno>
    - recursosDisponibles: List<EquipoMedico>
    --
    + registrarPaciente(p: Paciente): void
    + existePacienteConDNI(dni: String): boolean
    + generarSiguienteNumeroHistoria(): String
    + realizarTriaje(p: Paciente, e: Enfermero): void
    + asignarCama(p: Paciente): boolean
    + calcularTiempoEspera(p: Paciente): int
    + activarAlerta(p: Paciente): void
    + enviarNotificacion(mensaje: String): void
    + guardarPacientes(): void
    + cargarPacientes(): void
    + mostrarColaPacientes(): void
    + mostrarEstadoCamas(): void
}

' ========== RELACIONES ==========

' --- Asociaciones y composiciones ---
Paciente "1" -- "0..1" Triaje : recibe >

Paciente "0..1" -- "0..1" Cama : ocupa >
Cama "0..*" -- "1" SistemaUrgencias : gestiona >
EquipoMedico "0..*" -- "1" SistemaUrgencias : gestiona >

Triaje "0..1" -- "0..1" Turno : genera >

Paciente "0..1" -- "1" Traslado : realiza >

SistemaUrgencias "1" -- "*" Triaje : procesa >
SistemaUrgencias "1" -- "*" Paciente : registra >

@enduml
